# kobo-calibre-sync

./: .gitignore  CLAUDE.md  PROXMOX_SETUP.md  launch.sh  pyproject.toml  requirements.txt  run.py
scripts/: install-full.sh  install.sh  proxmox-create-lxc.sh
src/: main.py
src/core/: calibre.py  metadata.py  scanner.py
src/gui/: main_window.py  main_window_tk.py  styles.py
src/web/: app.py
tests/: test_scanner.py
