[project]
name = "kobo-calibre-sync"
version = "0.1.0"
description = "GUI app to import ebooks into Calibre and sync to Kobo via wireless"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6.0",
    "ebooklib>=0.18",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
qt_api = "pyside6"

[project.scripts]
kobo-calibre-sync = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
